Tidying up mobile layout

--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Untitled 10k Apart Entry</title>
+	<title>10k Apart Entry</title>
 
 	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="320">
-	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width">
 		
 	<!--CSS-->
-	<link rel="stylesheet" media="screen" href="css/style.css" />
-		
-	<!--JS-->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 <div class="content clearfix">
 	<nav>
 			<form id="search" class="">
-			<input type="text" id="userName" class="" name="userName" placeholder="Enter your LastFM username to check your friends listening habits!">
+			<input type="text" id="userName" class="" name="userName" placeholder="Enter a LastFM username">
 			<input type="submit" id="submit" class="" name="submit">
 		</form>
 		<p class="message"></p>
@@ -30,5 +26,7 @@
 
 	</section>
 </div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
