Major style changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>10k Apart Entry</title>
 	<meta name="viewport" content="width=device-width">
-
+	<!-- @reload -->
 	<!--CSS-->
 	<link rel="stylesheet" href="css/style.css" />
 </head>
@@ -12,16 +12,14 @@
 <body>
 <div class="content clearfix">
 	<nav>
-			<form id="search" class="">
+		<form id="search" class="">
 			<input type="text" id="userName" class="" name="userName" placeholder="Enter a LastFM username">
-			<input type="submit" id="submit" class="" name="submit">
+			<!-- <input type="submit" id="submit" class="" name="submit"> -->
 		</form>
 		<p class="message"></p>
 	</nav>
 
-	<section class="lastfm">
-
-	</section>
+	<section class="lastfm"></section>
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
