--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>10k Apart Entry</title>
+	<title>Trending Tracks: A 10k Apart Entry</title>
 	<meta name="viewport" content="width=device-width">
 	<!-- @reload -->
 	<!--CSS-->
@@ -14,7 +14,7 @@
 	<nav>
 		<form id="search" class="">
 			<input type="text" id="userName" class="" name="userName" placeholder="Enter a LastFM username">
-			<!-- <input type="submit" id="submit" class="" name="submit"> -->
+			<input type="submit" id="submit" class="" name="submit">
 		</form>
 		<p class="message"></p>
 	</nav>
@@ -23,5 +23,6 @@
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
+<p class="byline">By <a href="http://danmatthew.co.uk/">Daniel Matthew &amp; <a href="http://benhowdle.im">Ben Howdle</a> 2011-2014 ;)</p>
 </body>
 </html>
